--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </head>
   <body>
     <div class="jumbotron">
-	  <h1>Hello, world!</h1>
-	  <p>...</p>
-	  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	  <div style="text-align:center;"><h1>Muhammad Mustajab Ali</h1>
+	  	<p>Informatics Student, Technical University of Munich</p>
+	  </div>
 	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
