Web Site Changes. Added -font-awesome -jquery -twitter bootstrap -css file -cv

--- a/index.html
+++ b/index.html
@@ -6,26 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Muhammad Mustajab Ali</title>
-
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!--Custom -->
+    <link href="css/index.css" rel="stylesheet">
+    
   </head>
   <body>
-    <div class="jumbotron">
-	  <div style="text-align:center;"><h1>Muhammad Mustajab Ali</h1>
-	  	<p>Informatics Student, Technical University of Munich</p>
-	  </div>
+  	<div class='wrapper'>
+		<div class="page-header">
+		  <h1>Muhammad Mustajab Ali </h1>
+		  <small class="subHeading">Informatics Student, Technical University of Munich</small>
+		</div>
+		<div id="body">
+			<div class="row" >
+			  <div class="col-xs-6 col-md-3">
+			      <img src="img/mustajab.jpg" class="image" alt="mustajab.jpg">
+			  </div>
+			  <div id="textBody" class="col-xs-6 col-md-9">
+			  	<div class="column">
+			  	  <div id="about">
+					  <div class="desc about">
+				  		  <i class="fa fa-quote-left" aria-hidden="true"></i>
+						  <p class="leftMargin">Hi, I’m Muhammad Mustajab. I’m a student living in Munich, Germany. I am a fan of travel, programming, and web development. I’m also interested in technology and volunteering.
+						  </p>
+						  <i class="fa fa-quote-right" aria-hidden="true"></i>
+					  </div>
+				  </div>
+				  <div id="resume" >
+				 	<div class="desc">
+						<a href="files/MuhammadMustajabAliResume.pdf" target="_blank" download>Download Resume</a>
+					</div>
+			 	  </div>
+		 	    </div>
+		 	  </div>
+			</div>
+		</div>
+		<div class='push'></div>
 	</div>
+	<div class='footer' >
+		
+		<span class="links">
+			<!--LinkedIn-->
+			<a href="https://de.linkedin.com/in/mustajab-ali" target="_blank"><i class="fa fa-linkedin-square icon linkedin" aria-hidden="true"></i></a>
+			<!--Facebook-->
+			<a href="https://www.facebook.com/mustajab.me" target="_blank"><i class="fa fa-facebook-square icon fb" aria-hidden="true"></i></a>
+			<!--Xing-->
+			<a href="https://www.xing.com/profile/MuhammadMustajab_Ali" target="_blank"><i class="fa fa-xing-square icon xing" aria-hidden="true"></i></a>
+			<!--Twitter-->
+			<a href="https://twitter.com/mmustajabali" target="_blank"><i class="fa fa-twitter-square icon twitter" aria-hidden="true"></i></a>
+			<!--Github-->
+			<a href="https://github.com/mustajabali" target="_blank"><i class="fa fa-github-square icon " aria-hidden="true"></i></a>
+		</span>
+		<div id="copyrights">Copyrights &copy; Reserved 2016.</>
+		
+	</div>
+	<script src="js/font-awesome.js"></script>
+	    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/jquery-3.1.0.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
