--- a/index.html
+++ b/index.html
@@ -19,26 +19,27 @@
 		  <small class="subHeading">Informatics Student, Technical University of Munich</small>
 		</div>
 		<div id="body">
-			<div class="row" >
-			  <div class="col-xs-6 col-md-3">
-			      <img src="img/mustajab.jpg" class="image" alt="mustajab.jpg">
-			  </div>
-			  <div id="textBody" class="col-xs-6 col-md-9">
-			  	<div class="column">
-			  	  <div id="about">
-					  <div class="desc about">
-				  		  <i class="fa fa-quote-left" aria-hidden="true"></i>
-						  <p class="leftMargin">Hi, I’m Muhammad Mustajab. I’m a student living in Munich, Germany. I am a fan of travel, programming, and web development. I’m also interested in technology and volunteering.
-						  </p>
-						  <i class="fa fa-quote-right" aria-hidden="true"></i>
-					  </div>
+			<div class="row" id="card">
+			  
+				  <div class="col-xs-6 col-md-3" id="leftside">
+				      <img src="img/mustajab.jpg" class="image" alt="mustajab.jpg">
 				  </div>
-				  <div id="resume" >
-				 	<div class="desc">
-						<a href="files/MuhammadMustajabAliResume.pdf" target="_blank" download>Download Resume</a>
-					</div>
-			 	  </div>
-		 	    </div>
+				  <div id="textBody" class="col-xs-6 col-md-9">
+				  	<div class="column" id="rightside">
+				  	  <div id="about">
+						  <div class="desc about">
+					  		  <i class="fa fa-quote-left" aria-hidden="true"></i>
+							  <p class="leftMargin">Hi, I’m Muhammad Mustajab. I’m a student living in Munich, Germany. I am a fan of travel, programming, and web development. I’m also interested in technology and volunteering.
+							  </p>
+							  <i class="fa fa-quote-right" aria-hidden="true"></i>
+						  </div>
+					  </div>
+					  <div id="resume" >
+					 	<div class="desc">
+							<a href="files/MuhammadMustajabAliResume.pdf" target="_blank" download>Download Résumé</a>
+						</div>
+				 	  </div>
+			 	    </div>
 		 	  </div>
 			</div>
 		</div>
