--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!--Custom -->
     <link href="css/index.css" rel="stylesheet">
-    
+
+    <link rel="icon" href="img/mustajab.jpg">
   </head>
   <body>
   	<div class='wrapper'>
@@ -60,7 +61,7 @@
 			<!--Github-->
 			<a href="https://github.com/mustajabali" target="_blank"><i class="fa fa-github-square icon " aria-hidden="true"></i></a>
 		</span>
-		<div id="copyrights">Copyrights &copy; Reserved 2016.</>
+		<div id="copyrights">Copyrights &copy; Reserved 2016.</div>
 		
 	</div>
 	<script src="js/font-awesome.js"></script>
