--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				  	  <div id="about">
 						  <div class="desc about">
 					  		  <i class="fa fa-quote-left" aria-hidden="true"></i>
-							  <p class="leftMargin">Hi, I’m Muhammad Mustajab. I’m a student living in Munich, Germany. I am a fan of travel, programming, and web development. I’m also interested in technology and volunteering.
+							  <p class="leftMargin">Hi, I’m Muhammad Mustajab. I’m a student living in Munich, Germany. I am a fan of travelling, programming, and web development. I’m also interested in technology and volunteering.
 							  </p>
 							  <i class="fa fa-quote-right" aria-hidden="true"></i>
 						  </div>
